# WorkflowForge

./: CHANGELOG.md  CONTRIBUTING.md  License.md  README.md  TECHNICAL_STATUS.md  pyproject.toml
.github/workflows/: tests.yml
docs/: Launch Annoucement.md  Overview.md  PR.md  SACS.md  SFCS Technical.md  SFCS.md  TTFA.md  UDPL.md  ZCP.md
docs/Autonoma/: MOA.md  PFA.md  TTDA.md
docs/Backend/: GPU VM Core.md  Main Orchestration Autonoma.md  Overview.md  VM initialization.md
docs/Backend/Autonoma/: FTFA.md  PFA.md  SIFA.md  SOCA.md  TTA.md
docs/Backend/Stages/: Stages Overview.md
docs/Frontend/: Overview.md  Parsing and UDPL.md  Resources.md  SFCS and flow control.md  SFCS.md  TECHNICAL_DETAILS.md  UDPL.md
docs/Outreach/: UW.md
docs/UserGuide/: Client_Server_System.md  Overview.md  Resources.md  SFCS.md  UDPL.md
docs/ZCP/: Graph Builder and Control Flow.md  Specifications.md  Workflows.md  ZCP.md
examples/: frontend_demo.ipynb
src/workflow_forge/: resources.py  tokenizer_interface.py
src/workflow_forge/ZCP/: builder.py  nodes.py
src/workflow_forge/backend/: tag_converter.py
src/workflow_forge/flow_control/: builder.py  program.py  scope.py  tools.py
src/workflow_forge/parsing/: block_parsing.py  config_parsing.py  main_parser.py  prompt_parsing.py  resource_parsing.py  zone_parsing.py  (+1 more)
tests/flow_control/: test_context_managers.py  test_integration.py  test_program.py  test_scope.py
tests/parsing/: test_block_parsing.py  test_config_parsing.py  test_integration.py  test_main_parser.py  test_sequence_parsing.py  test_visualization.py  test_zone_parsing.py
tests/zcp/: test_graph_builder.py  test_integration.py  test_lzcp_node.py  test_rendering.py  test_rzcp_node.py  test_szcp_node.py  test_visualization.py  test_workflow.py  test_zcp_node.py
(+21 files in other folders)
